Even when matching on the main class name or on system properties,
** Checks the Java version before attaching to avoid attachment on unsupported JVMs.
* Cassandra instrumentation - {pull}1712[#1712]
* Log correlation supports JBoss Logging - {pull}1737[#1737]
* Update Byte-buddy to `1.11.0` - {pull}1769[#1769]
* Support for user.domain {pull}1756[#1756]
* JAX-RS supports javax.ws.rs.PATCH

[float]
===== Bug fixes
* Fixed log correlation for log4j2 - {pull}1720[#1720]
* Fix apm-log4j1-plugin and apm-log4j2-plugin dependency on slf4j - {pull}1723[#1723]
* Avoid systematic `MessageNotWriteableException` error logging, now only visible in `debug` - {pull}1715[#1715] and {pull}1730[#1730]
* Fix rounded number format for non-english locales - {pull}1728[#1728]
* Fix `NullPointerException` on legacy Apache client instrumentation when host is `null` - {pull}1746[#1746]
* Apply consistent proxy class exclusion heuristic - {pull}1738[#1738]
* Fix micrometer serialization error - {pull}1741[#1741]
* Optimize & avoid `ensureInstrumented` deadlock by skipping stack-frame computation for Java7+ bytecode - {pull}1758[#1758]

[float]
===== Refactors
* Migrate some plugins to indy dispatcher {pull}1369[#1369] {pull}1410[#1410] {pull}1374[#1374]

[[release-notes-1.x]]
=== Java Agent version 1.x

[[release-notes-1.22.0]]
==== 1.22.0 - 2021/03/24

[float]
===== Breaking changes
* Dots in metric names of Micrometer metrics get replaced with underscores to avoid mapping conflicts.
De-dotting be disabled via <<config-dedot-custom-metrics, `dedot_custom_metrics`>>. - {pull}1700[#1700]

[float]
===== Features
* Introducing a new mechanism to ease the development of community instrumentation plugins. See <<config-plugins-dir>> for
more details. This configuration was already added in 1.18.0, but more extensive and continuous integration testing
allows us to expose it now. It is still marked as "experimental" though, meaning that future changes in the mechanism