@@ -24,6 +24,7 @@
  */
 package co.elastic.apm.agent.util;
 
+import java.io.File;
 import java.io.IOException;
 import java.net.URI;
 import java.net.URISyntaxException;
@@ -76,13 +77,21 @@ public class PackageScanner {
         return classNames;
     }
 
+    /**
+     * Lists all classes in the provided path, as part of the provided base package
+     * @param basePackage the package to prepend to all class files found in the relative path
+     * @param basePath the base lookup path. <b>NOTE: this is a file system path, as opposed to the Java class resource
+     *                 path, localized to the file system. Specifically, we need to use the proper {@link File#separatorChar}</b>.
+     * @return a list of fully qualified class names from the scanned package
+     * @throws IOException error in file tree scanning
+     */
     private static List<String> listClassNames(final String basePackage, final Path basePath) throws IOException {
         final List<String> classNames = new ArrayList<>();
         Files.walkFileTree(basePath, new SimpleFileVisitor<Path>() {
             @Override
             public FileVisitResult visitFile(Path file, BasicFileAttributes attrs) {
                 if (file.toString().endsWith(".class")) {
-                    classNames.add(basePackage + "." + basePath.relativize(file).toString().replace('/', '.').replace(".class", ""));
+                    classNames.add(basePackage + "." + basePath.relativize(file).toString().replace(File.separatorChar, '.').replace(".class", ""));
                 }
                 return FileVisitResult.CONTINUE;
             }
