@@ -35,6 +35,9 @@ import co.elastic.apm.agent.objectpool.NoopObjectPool;
 import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.condition.DisabledIfSystemProperty;
+import org.junit.jupiter.api.condition.DisabledOnOs;
+import org.junit.jupiter.api.condition.OS;
 import org.stagemonitor.configuration.ConfigurationRegistry;
 
 import java.io.IOException;
@@ -68,6 +71,7 @@ class CallTreeSpanifyTest {
     }
 
     @Test
+    @DisabledOnOs(OS.WINDOWS)
     void testSpanification() throws Exception {
         CallTree.Root callTree = CallTreeTest.getCallTree(tracer, new String[]{
             " dd   ",
