@@ -26,6 +26,8 @@ package co.elastic.apm.agent.profiler.asyncprofiler;
 
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.condition.DisabledOnOs;
+import org.junit.jupiter.api.condition.OS;
 import org.junit.jupiter.api.io.TempDir;
 
 import java.io.File;
@@ -33,6 +35,7 @@ import java.io.FilenameFilter;
 
 import static org.assertj.core.api.Assertions.assertThat;
 
+@DisabledOnOs(OS.WINDOWS)
 public class AsyncProfilerTest {
 
     @BeforeEach
